antlr-generated/com/pixelmaid/dresscode/antlr/JogoParser.java
// $ANTLR 3.5 /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Jogo.g 2013-01-31 17:30:04

  package com.pixelmaid.dresscode.antlr;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class JogoParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "BOOLEAN", "CHARLITERAL", "COMMENT", 
		"DOUBLELITERAL", "DoubleSuffix", "ELSEIF_STATEMENT", "ELSE_STATEMENT", 
		"EscapeSequence", "Exponent", "FLOATLITERAL", "FUNC_CALL", "FUNC_DECL", 
		"FloatSuffix", "HexDigit", "HexPrefix", "IDENT", "IF_STATEMENT", "INTLITERAL", 
		"IntegerNumber", "LONGLITERAL", "LongSuffix", "MULTILINE_COMMENT", "NEGATION", 
		"NonIntegerNumber", "PARAM", "POSTDECREMENT", "POSTINCREMENT", "PROGRAM", 
		"STRINGLITERAL", "VAR_CALL", "VAR_DECL", "WS", "'!='", "'%'", "'('", "')'", 
		"'*'", "'+'", "'++'", "','", "'-'", "'--'", "'/'", "';'", "'<'", "'<='", 
		"'='", "'=='", "'>'", "'>='", "'['", "']'", "'and'", "'boolean'", "'char'", 
		"'constant'", "'double'", "'else'", "'elseif'", "'end'", "'exit'", "'float'", 
		"'function'", "'if'", "'int'", "'list'", "'long'", "'loop'", "'or'", "'program'", 
		"'return'", "'string'", "'then'", "'var'", "'when'", "'while'"
	};
	public static final int EOF=-1;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int T__58=58;
	public static final int T__59=59;
	public static final int T__60=60;
	public static final int T__61=61;
	public static final int T__62=62;
	public static final int T__63=63;
	public static final int T__64=64;
	public static final int T__65=65;
	public static final int T__66=66;
	public static final int T__67=67;
	public static final int T__68=68;
	public static final int T__69=69;
	public static final int T__70=70;
	public static final int T__71=71;
	public static final int T__72=72;
	public static final int T__73=73;
	public static final int T__74=74;
	public static final int T__75=75;
	public static final int T__76=76;
	public static final int T__77=77;
	public static final int T__78=78;
	public static final int T__79=79;
	public static final int BOOLEAN=4;
	public static final int CHARLITERAL=5;
	public static final int COMMENT=6;
	public static final int DOUBLELITERAL=7;
	public static final int DoubleSuffix=8;
	public static final int ELSEIF_STATEMENT=9;
	public static final int ELSE_STATEMENT=10;
	public static final int EscapeSequence=11;
	public static final int Exponent=12;
	public static final int FLOATLITERAL=13;
	public static final int FUNC_CALL=14;
	public static final int FUNC_DECL=15;
	public static final int FloatSuffix=16;
	public static final int HexDigit=17;
	public static final int HexPrefix=18;
	public static final int IDENT=19;
	public static final int IF_STATEMENT=20;
	public static final int INTLITERAL=21;
	public static final int IntegerNumber=22;
	public static final int LONGLITERAL=23;
	public static final int LongSuffix=24;
	public static final int MULTILINE_COMMENT=25;
	public static final int NEGATION=26;
	public static final int NonIntegerNumber=27;
	public static final int PARAM=28;
	public static final int POSTDECREMENT=29;
	public static final int POSTINCREMENT=30;
	public static final int PROGRAM=31;
	public static final int STRINGLITERAL=32;
	public static final int VAR_CALL=33;
	public static final int VAR_DECL=34;
	public static final int WS=35;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public JogoParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public JogoParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return JogoParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Jogo.g"; }


	public static class program_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "program"
	// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Jogo.g:32:1: program : 'program' IDENT ( script )* 'end' IDENT -> ^( PROGRAM ( script )* ) ;
	public final JogoParser.program_return program() throws RecognitionException {
		JogoParser.program_return retval = new JogoParser.program_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal1=null;
		Token IDENT2=null;
		Token string_literal4=null;
		Token IDENT5=null;
		ParserRuleReturnScope script3 =null;

		Object string_literal1_tree=null;
		Object IDENT2_tree=null;
		Object string_literal4_tree=null;
		Object IDENT5_tree=null;
		RewriteRuleTokenStream stream_IDENT=new RewriteRuleTokenStream(adaptor,"token IDENT");
		RewriteRuleTokenStream stream_63=new RewriteRuleTokenStream(adaptor,"token 63");
		RewriteRuleTokenStream stream_73=new RewriteRuleTokenStream(adaptor,"token 73");
		RewriteRuleSubtreeStream stream_script=new RewriteRuleSubtreeStream(adaptor,"rule script");

		try {
			// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Jogo.g:33:2: ( 'program' IDENT ( script )* 'end' IDENT -> ^( PROGRAM ( script )* ) )
			// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Jogo.g:33:3: 'program' IDENT ( script )* 'end' IDENT
			{
			string_literal1=(Token)match(input,73,FOLLOW_73_in_program101);  
			stream_73.add(string_literal1);

			IDENT2=(Token)match(input,IDENT,FOLLOW_IDENT_in_program103);  
			stream_IDENT.add(IDENT2);

			// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Jogo.g:34:4: ( script )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==IDENT||LA1_0==59||(LA1_0 >= 66 && LA1_0 <= 67)||LA1_0==69||LA1_0==71||LA1_0==77||LA1_0==79) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Jogo.g:34:5: script
					{
					pushFollow(FOLLOW_script_in_program109);
					script3=script();
					state._fsp--;

					stream_script.add(script3.getTree());
					}
					break;

				default :
					break loop1;
				}
			}

			string_literal4=(Token)match(input,63,FOLLOW_63_in_program115);  
			stream_63.add(string_literal4);

			IDENT5=(Token)match(input,IDENT,FOLLOW_IDENT_in_program117);  
			stream_IDENT.add(IDENT5);

			// AST REWRITE
			// elements: script
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 35:15: -> ^( PROGRAM ( script )* )
			{
				// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Jogo.g:35:18: ^( PROGRAM ( script )* )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(PROGRAM, "PROGRAM"), root_1);
				// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Jogo.g:35:28: ( script )*
				while ( stream_script.hasNext() ) {
					adaptor.addChild(root_1, stream_script.nextTree());
				}
				stream_script.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "program"


	public static class script_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "script"
	// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Jogo.g:38:1: script : ( atom | function );
	public final JogoParser.script_return script() throws RecognitionException {
		JogoParser.script_return retval = new JogoParser.script_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope atom6 =null;
		ParserRuleReturnScope function7 =null;


		try {
			// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Jogo.g:39:2: ( atom | function )
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==IDENT||LA2_0==59||LA2_0==67||LA2_0==69||LA2_0==71||LA2_0==77||LA2_0==79) ) {
				alt2=1;
			}
			else if ( (LA2_0==66) ) {
				alt2=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}

			switch (alt2) {
				case 1 :
					// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Jogo.g:39:3: atom
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_atom_in_script136);
					atom6=atom();
					state._fsp--;

					adaptor.addChild(root_0, atom6.getTree());

					}
					break;
				case 2 :
					// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Jogo.g:40:3: function
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_function_in_script140);
					function7=function();
					state._fsp--;

					adaptor.addChild(root_0, function7.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "script"


	public static class atom_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "atom"
	// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Jogo.g:43:1: atom : ( variable | statement | typeDecl );
	public final JogoParser.atom_return atom() throws RecognitionException {
		JogoParser.atom_return retval = new JogoParser.atom_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope variable8 =null;
		ParserRuleReturnScope statement9 =null;
		ParserRuleReturnScope typeDecl10 =null;


		try {
			// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Jogo.g:44:2: ( variable | statement | typeDecl )
			int alt3=3;
			switch ( input.LA(1) ) {
			case 59:
			case 77:
				{
				alt3=1;
				}
				break;
			case IDENT:
			case 67:
			case 71:
			case 79:
				{
				alt3=2;
				}
				break;
			case 69:
				{
				alt3=3;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}
			switch (alt3) {
				case 1 :
					// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Jogo.g:44:3: variable
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_variable_in_atom151);
					variable8=variable();
					state._fsp--;

					adaptor.addChild(root_0, variable8.getTree());

					}
					break;
				case 2 :
					// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Jogo.g:45:4: statement
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_statement_in_atom157);
					statement9=statement();
					state._fsp--;

					adaptor.addChild(root_0, statement9.getTree());

					}
					break;
				case 3 :
					// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Jogo.g:46:4: typeDecl
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_typeDecl_in_atom163);
					typeDecl10=typeDecl();
					state._fsp--;

					adaptor.addChild(root_0, typeDecl10.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "atom"


	public static class function_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "function"
	// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Jogo.g:49:1: function : 'function' IDENT '(' ( parameters )? ')' ( atom )* ( returnStatement )* 'end' IDENT -> ^( FUNC_DECL IDENT ( parameters )? ( atom )* ( returnStatement )* ) ;
	public final JogoParser.function_return function() throws RecognitionException {
		JogoParser.function_return retval = new JogoParser.function_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal11=null;
		Token IDENT12=null;
		Token char_literal13=null;
		Token char_literal15=null;
		Token string_literal18=null;
		Token IDENT19=null;
		ParserRuleReturnScope parameters14 =null;
		ParserRuleReturnScope atom16 =null;
		ParserRuleReturnScope returnStatement17 =null;

		Object string_literal11_tree=null;
		Object IDENT12_tree=null;
		Object char_literal13_tree=null;
		Object char_literal15_tree=null;
		Object string_literal18_tree=null;
		Object IDENT19_tree=null;
		RewriteRuleTokenStream stream_66=new RewriteRuleTokenStream(adaptor,"token 66");
		RewriteRuleTokenStream stream_IDENT=new RewriteRuleTokenStream(adaptor,"token IDENT");
		RewriteRuleTokenStream stream_63=new RewriteRuleTokenStream(adaptor,"token 63");
		RewriteRuleTokenStream stream_39=new RewriteRuleTokenStream(adaptor,"token 39");
		RewriteRuleTokenStream stream_38=new RewriteRuleTokenStream(adaptor,"token 38");
		RewriteRuleSubtreeStream stream_atom=new RewriteRuleSubtreeStream(adaptor,"rule atom");
		RewriteRuleSubtreeStream stream_returnStatement=new RewriteRuleSubtreeStream(adaptor,"rule returnStatement");
		RewriteRuleSubtreeStream stream_parameters=new RewriteRuleSubtreeStream(adaptor,"rule parameters");

		try {
			// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Jogo.g:50:2: ( 'function' IDENT '(' ( parameters )? ')' ( atom )* ( returnStatement )* 'end' IDENT -> ^( FUNC_DECL IDENT ( parameters )? ( atom )* ( returnStatement )* ) )
			// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Jogo.g:50:4: 'function' IDENT '(' ( parameters )? ')' ( atom )* ( returnStatement )* 'end' IDENT
			{
			string_literal11=(Token)match(input,66,FOLLOW_66_in_function175);  
			stream_66.add(string_literal11);

			IDENT12=(Token)match(input,IDENT,FOLLOW_IDENT_in_function177);  
			stream_IDENT.add(IDENT12);

			char_literal13=(Token)match(input,38,FOLLOW_38_in_function179);  
			stream_38.add(char_literal13);

			// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Jogo.g:50:25: ( parameters )?
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==IDENT||(LA4_0 >= 57 && LA4_0 <= 58)||LA4_0==60||LA4_0==65||(LA4_0 >= 68 && LA4_0 <= 70)||LA4_0==75) ) {
				alt4=1;
			}
			switch (alt4) {
				case 1 :
					// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Jogo.g:50:25: parameters
					{
					pushFollow(FOLLOW_parameters_in_function181);
					parameters14=parameters();
					state._fsp--;

					stream_parameters.add(parameters14.getTree());
					}
					break;

			}

			char_literal15=(Token)match(input,39,FOLLOW_39_in_function184);  
			stream_39.add(char_literal15);

			// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Jogo.g:51:3: ( atom )*
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==IDENT||LA5_0==59||LA5_0==67||LA5_0==69||LA5_0==71||LA5_0==77||LA5_0==79) ) {
					alt5=1;
				}

				switch (alt5) {
				case 1 :
					// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Jogo.g:51:4: atom
					{
					pushFollow(FOLLOW_atom_in_function189);
					atom16=atom();
					state._fsp--;

					stream_atom.add(atom16.getTree());
					}
					break;

				default :
					break loop5;
				}
			}

			// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Jogo.g:52:3: ( returnStatement )*
			loop6:
			while (true) {
				int alt6=2;
				int LA6_0 = input.LA(1);
				if ( (LA6_0==74) ) {
					alt6=1;
				}

				switch (alt6) {
				case 1 :
					// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Jogo.g:52:4: returnStatement
					{
					pushFollow(FOLLOW_returnStatement_in_function196);
					returnStatement17=returnStatement();
					state._fsp--;

					stream_returnStatement.add(returnStatement17.getTree());
					}
					break;

				default :
					break loop6;
				}
			}

			string_literal18=(Token)match(input,63,FOLLOW_63_in_function202);  
			stream_63.add(string_literal18);

			IDENT19=(Token)match(input,IDENT,FOLLOW_IDENT_in_function204);  
			stream_IDENT.add(IDENT19);

			// AST REWRITE
			// elements: parameters, atom, returnStatement, IDENT
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 53:15: -> ^( FUNC_DECL IDENT ( parameters )? ( atom )* ( returnStatement )* )
			{
				// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Jogo.g:53:18: ^( FUNC_DECL IDENT ( parameters )? ( atom )* ( returnStatement )* )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(FUNC_DECL, "FUNC_DECL"), root_1);
				adaptor.addChild(root_1, stream_IDENT.nextNode());
				// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Jogo.g:53:36: ( parameters )?
				if ( stream_parameters.hasNext() ) {
					adaptor.addChild(root_1, stream_parameters.nextTree());
				}
				stream_parameters.reset();

				// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Jogo.g:53:48: ( atom )*
				while ( stream_atom.hasNext() ) {
					adaptor.addChild(root_1, stream_atom.nextTree());
				}
				stream_atom.reset();

				// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Jogo.g:53:56: ( returnStatement )*
				while ( stream_returnStatement.hasNext() ) {
					adaptor.addChild(root_1, stream_returnStatement.nextTree());
				}
				stream_returnStatement.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "function"


	public static class parameters_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "parameters"
	// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Jogo.g:56:1: parameters : parameter ( ',' parameter )* ;
	public final JogoParser.parameters_return parameters() throws RecognitionException {
		JogoParser.parameters_return retval = new JogoParser.parameters_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token char_literal21=null;
		ParserRuleReturnScope parameter20 =null;
		ParserRuleReturnScope parameter22 =null;

		Object char_literal21_tree=null;

		try {
			// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Jogo.g:57:2: ( parameter ( ',' parameter )* )
			// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Jogo.g:57:4: parameter ( ',' parameter )*
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_parameter_in_parameters237);
			parameter20=parameter();
			state._fsp--;

			adaptor.addChild(root_0, parameter20.getTree());

			// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Jogo.g:57:14: ( ',' parameter )*
			loop7:
			while (true) {
				int alt7=2;
				int LA7_0 = input.LA(1);
				if ( (LA7_0==43) ) {
					alt7=1;
				}

				switch (alt7) {
				case 1 :
					// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Jogo.g:57:15: ',' parameter
					{
					char_literal21=(Token)match(input,43,FOLLOW_43_in_parameters240); 
					char_literal21_tree = (Object)adaptor.create(char_literal21);
					adaptor.addChild(root_0, char_literal21_tree);

					pushFollow(FOLLOW_parameter_in_parameters242);
					parameter22=parameter();
					state._fsp--;

					adaptor.addChild(root_0, parameter22.getTree());

					}
					break;

				default :
					break loop7;
				}
			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
